-added main html and css code

--- a/index.html
+++ b/index.html
@@ -6,16 +6,32 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
-        <meta content="width-device-width">
-        <title>Simply calculator</title>
+        <meta name="viewport" content="width=device-width">
+        <title>Simple calculator</title>
         <link rel="shortcut icon" href="">
     </head>
 
     <body>
         <header>
-            <h1>Simply calculator</h1>
+            <h1>Simple calculator</h1>
         </header>
+        <article>
+            <section class="calculator">
+                <input type="text">
+                <select name="sign" id="">
+                    <option value="choose">Выберите знак</option>
+                    <option value="summarized">+</option>
+                    <option value="difference">-</option>
+                    <option value="multiplication">&#xD7</option>
+                    <option value="division">&#xF7</option>
+                </select>
+                <input type="text">
+            </section>
+            <button>Очистить поля</button>
+            <h1>Результат:</h1>
+            <h1>564</h1>
+        </article>
 
-
+        <footer><a href="https://github.com/VXLTIT" class="github">My Github</a></footer>
     </body>
 </html>
