-added button to clear fields for entering numbers

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </section>
 
             <div class="clear-and-show">
-                <button>Очистить поля</button>
+                <button class="clear">Очистить поля</button>
                 <button class="show-result">Посчитать</button>
             </div>
 
