-added calculation history

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
             </div>
 
             <h1 class="result-text">Результат:</h1>
-            <h1 class="result-number">564</h1>
+            <h1 class="result-number"></h1>
 
+            <div class="calculation-history"><h3>История Вычислений:</h3></div>
         </article>
+
 
         <footer><a href="https://github.com/VXLTIT" class="github">My Github</a></footer>
 
