The order of obtaining calculation results has been changed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <h1 class="result-text">Результат:</h1>
             <h1 class="result-number"></h1>
 
-            <div class="calculation-history"><h3>История Вычислений:</h3></div>
+            <h3>История Вычислений:</h3>
+            <div class="calculation-history"></div>
         </article>
 
 
